# parma_julia-analysis

./: .gitattributes  .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  analyze.ipynb  analyze.jl  calc_mean.cpp  hello.jl  main-simple.jl  memo  memo.md  report  stopping_power.jl  test.ipynb
ParmaAnalysis/: Manifest.toml  Project.toml
ParmaAnalysis/data/: stopping-e_cadmium.csv  stopping-p_silver.csv  stopping-p_tin.csv  stopping_power.csv  stopping_power_energy.csv
ParmaAnalysis/src/: ParmaAnalysis.jl  crab_flux.jl  detected_events.jl  energy_loss.jl  flux_altitude_heatmap.jl  flux_coordinate_heatmap.jl  flux_detected.jl  flux_energy_line.jl  flux_height_line.jl  flux_line.jl  heatmap_wrapper.jl  parmawrapper.jl  plotaltitude.jl  plotcoordinate.jl  plotlineenergy.jl  stopping_power.jl  utils.jl  variables.jl
modules/: flux_heatmap.jl  parma_wrapper.jl
parma_cpp/: .gitignore  CMakeLists.txt  Readme.txt  config.h.in  main-generator.cpp  main-simple.cpp  main.cpp  subroutines.cpp
parma_cpp/GeneOut/: flux.out  generation.out
parma_cpp/input/: FFPtable.day
src/: analyze.jl  analyze_events.jl  crab_flux.jl  likelihood.jl  main-simple.jl  plot_crab_flux.jl  plot_detected_energy.jl  plot_energy_line.jl  plot_energyloss.jl  plot_events.jl  plot_events_angle.jl  plot_flux_line.jl  plot_flux_map.jl  plot_stopping_power.jl  stopping_power.jl  test.jl
test/: calc_benchmark.ipynb  linear_algebra.ipynb  test.ipynb  test_cairomakie.ipynb  test_threads.jl
